# base-sequence-toolkit

./: .gitignore  LICENSE  README.md  README_EN.md  demo.py  pyproject.toml
base_sequence_toolkit/: __init__.py  cli.py
base_sequence_toolkit/adapters/: duncrew.py  swe_agent.py
base_sequence_toolkit/core/: analyzer.py  classifier.py  governor.py
examples/: swe_agent_analysis.py
tests/: test_analyzer.py  test_classifier.py  test_governor.py  test_swe_agent.py
