[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base-sequence-toolkit"
version = "0.1.0"
description = "XEPV Base Sequence Analysis Toolkit for AI Agent Execution Traces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DunCrew Team"},
]
keywords = ["ai-agent", "execution-trace", "base-sequence", "xepv", "swe-bench"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
swe-agent = ["datasets>=2.14"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/FatBy/base-sequence-toolkit"
Documentation = "https://github.com/FatBy/base-sequence-toolkit#readme"

[project.scripts]
bst-analyze = "base_sequence_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["base_sequence_toolkit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
