[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-smart-water"
version = "0.2.0"
description = "LLM-Smart-Water: XEPV Behavioral Sequence Analysis Framework for AI Agent Execution Traces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sidi Deng"},
]
keywords = ["ai-agent", "execution-trace", "base-sequence", "xepv", "swe-bench", "llm", "agent-governance", "behavioral-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
swe-agent = ["datasets>=2.14"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/FatBy/base-sequence-toolkit"
Documentation = "https://github.com/FatBy/base-sequence-toolkit#readme"
Paper = "https://github.com/FatBy/base-sequence-toolkit#citation"

[project.scripts]
bst-analyze = "base_sequence_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["base_sequence_toolkit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
